fixed spacing btn products

--- a/public/template1/css/style.css
+++ b/public/template1/css/style.css
@@ -2021,7 +2021,7 @@ section {
 
 	position: relative;
 
-	min-height: 341px;
+	/* min-height: 341px; */
 
 }
 
